--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       margin: 0;
       padding: 0;
       font-family: 'Lora', serif;
-      background-color: #AFACA3;
+      background-color: #D7D4C7;
       color: #333;
     }
     .about-wrapper {
